# TradingResults

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: __init__.py  config.py  main.py  routers.py
src/alembic/: env.py
src/alembic/versions/: 2025_04_23_1623-db6e9338ef3d_create_spimex_trading_results_table.py
src/models/: __init__.py  adapters.py  database.py  domain.py  schemas.py
src/service_layer/: queries.py  scheduler.py  utils.py
src/service_layer/parser/: data_parser.py  links_parser.py  results_generator.py
tests/: conftest.py  test_utils.py
tests/test_endpoints/: conftest.py  test_api.py  test_queries.py
tests/test_parser/: conftest.py  test_data_parser.py  test_results_generator.py
