[tool.poetry]
name = "tradingresults"
version = "0.1.0"
description = ""
authors = ["anna putilovskaya <putilovskayaam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiohttp = "^3.11.18"
bs4 = "^0.0.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
